<resources>
    <string name="app_name">Feed back system</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="suggestion">Suggestion</string>
    <string name="send_to_server">Send to server</string>
    <string name="give_your_reviews">Give Your Reviews</string>
    <string name="department">department</string>
    <string name="semester">semester</string>
    <string name="course_title">Course Title</string>

</resources>
