<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp"
    tools:context=".FeedbackActivity">

    <ImageView
        android:id="@+id/tvimg"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/graduation"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/name"
        android:background="#11000000"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_book"
        android:layout_below="@id/tvimg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/course_title"
        android:textStyle="italic"
        />

    <EditText
        android:id="@+id/sems"
        android:background="#11000000"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_name1"
        android:layout_alignLeft="@id/name"
        android:layout_alignStart="@id/name"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/semester"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/dept"
        android:background="#11000000"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_name2"
        android:layout_alignLeft="@id/sems"
        android:layout_alignStart="@id/sems"
        android:layout_below="@id/sems"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/department"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/msg"
        android:background="#11000000"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_name5"
        android:layout_alignLeft="@id/dept"
        android:layout_alignStart="@id/dept"
        android:layout_below="@id/dept"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/give_your_reviews"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/msg1"
        android:background="#11000000"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_name5"
        android:layout_alignLeft="@id/msg"
        android:layout_alignStart="@id/msg"
        android:layout_below="@id/msg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/suggestion"
        android:textStyle="italic"
        android:drawableStart="@drawable/ic_action_name5" />

    <Button
        android:id="@+id/btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dept"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:text="@string/send_to_server" />

    <Button
        android:id="@+id/btn1"
        android:enabled="false"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/msg1"
        android:layout_marginTop="20dp"
        android:text="Detail"
        />




</RelativeLayout>